# evm

./: .gitmodules  Cargo.toml  README.md
core/: Cargo.toml
core/src/: instructions.rs  interupt.rs  lib.rs  machine.rs  runtime.rs
src/: account.rs  context.rs  ctx.rs  env.rs  execute.rs  gas.rs  host.rs  instructions.rs  interrupt.rs  interupt.rs  lib.rs  machine.rs  message.rs  runtime.rs  utils.rs
tests/ef_tests/: Cargo.toml
tests/ef_tests/src/: case_result.rs  cases.rs  decode.rs  fake_host.rs  handler.rs  lib.rs  results.rs
tests/ef_tests/src/cases/: vm.rs
tests/ef_tests/tests/: tests.rs
