[package]
name = "fast_evm"
version = "0.0.0"
authors = ["Matt Garnett <crates@garnett.dev>"]
edition = "2018"

[lib]
name = "vm"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
evmc-vm = "7.1.0"
evmc-declare = "7.1.0"
primitive-types = "0.7.0"

[workspace]
members = ["tests/ef_tests"]
