[package]
name = "ef_tests"
version = "0.1.0"
authors = ["Matt Garnett <crates@garnett.dev>"]
edition = "2018"

[dependencies]
fast_evm = { path = "../.." }
hex = "0.4.2"
primitive-types = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"
test-env-log = "0.2.2"

